--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -8,3 +8,11 @@
   isbn = "978-972-8469-01-6",
   pages = "10"
 }
+
+
+@misc{era5,
+  title        = "Complete ERA5 from 1940: Fifth generation of ECMWF atmospheric reanalyses of the global climate. Copernicus Climate Change Service (C3S) Data Store (CDS). DOI: 10.24381/cds.143582cf",
+  author       = "{Hersbach, H., et. al}",
+  year         = 2017,
+  note         = "Accessed: 2024-02-01"
+}
